// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar :props :firstDayOfWeek 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="2010 年" class="t-select-option t-size-m"><span>
            2010 年
          </span></li>
                    <li title="2011 年" class="t-select-option t-size-m"><span>
            2011 年
          </span></li>
                    <li title="2012 年" class="t-select-option t-size-m"><span>
            2012 年
          </span></li>
                    <li title="2013 年" class="t-select-option t-size-m"><span>
            2013 年
          </span></li>
                    <li title="2014 年" class="t-select-option t-size-m"><span>
            2014 年
          </span></li>
                    <li title="2015 年" class="t-select-option t-size-m"><span>
            2015 年
          </span></li>
                    <li title="2016 年" class="t-select-option t-size-m"><span>
            2016 年
          </span></li>
                    <li title="2017 年" class="t-select-option t-size-m"><span>
            2017 年
          </span></li>
                    <li title="2018 年" class="t-select-option t-size-m"><span>
            2018 年
          </span></li>
                    <li title="2019 年" class="t-select-option t-size-m"><span>
            2019 年
          </span></li>
                    <li title="2020 年" class="t-select-option t-is-selected t-size-m"><span>
            2020 年
          </span></li>
                    <li title="2021 年" class="t-select-option t-size-m"><span>
            2021 年
          </span></li>
                    <li title="2022 年" class="t-select-option t-size-m"><span>
            2022 年
          </span></li>
                    <li title="2023 年" class="t-select-option t-size-m"><span>
            2023 年
          </span></li>
                    <li title="2024 年" class="t-select-option t-size-m"><span>
            2024 年
          </span></li>
                    <li title="2025 年" class="t-select-option t-size-m"><span>
            2025 年
          </span></li>
                    <li title="2026 年" class="t-select-option t-size-m"><span>
            2026 年
          </span></li>
                    <li title="2027 年" class="t-select-option t-size-m"><span>
            2027 年
          </span></li>
                    <li title="2028 年" class="t-select-option t-size-m"><span>
            2028 年
          </span></li>
                    <li title="2029 年" class="t-select-option t-size-m"><span>
            2029 年
          </span></li>
                    <li title="2030 年" class="t-select-option t-size-m"><span>
            2030 年
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="1 月" class="t-select-option t-size-m"><span>
            1 月
          </span></li>
                    <li title="2 月" class="t-select-option t-size-m"><span>
            2 月
          </span></li>
                    <li title="3 月" class="t-select-option t-size-m"><span>
            3 月
          </span></li>
                    <li title="4 月" class="t-select-option t-size-m"><span>
            4 月
          </span></li>
                    <li title="5 月" class="t-select-option t-size-m"><span>
            5 月
          </span></li>
                    <li title="6 月" class="t-select-option t-size-m"><span>
            6 月
          </span></li>
                    <li title="7 月" class="t-select-option t-size-m"><span>
            7 月
          </span></li>
                    <li title="8 月" class="t-select-option t-size-m"><span>
            8 月
          </span></li>
                    <li title="9 月" class="t-select-option t-size-m"><span>
            9 月
          </span></li>
                    <li title="10 月" class="t-select-option t-size-m"><span>
            10 月
          </span></li>
                    <li title="11 月" class="t-select-option t-size-m"><span>
            11 月
          </span></li>
                    <li title="12 月" class="t-select-option t-is-selected t-size-m"><span>
            12 月
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section" style="height: auto;">
      <div class="t-radio-group t-radio-group-outline t-radio-group-medium"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
    </div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        隐藏周末</span></button></div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        今天
      </span></button></div>
  </div>
  <div class="t-calendar__panel t-calendar__panel--month">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">三</th>
          <th class="t-calendar__table-head-cell">四</th>
          <th class="t-calendar__table-head-cell">五</th>
          <th class="t-calendar__table-head-cell">六</th>
          <th class="t-calendar__table-head-cell">日</th>
          <th class="t-calendar__table-head-cell">一</th>
          <th class="t-calendar__table-head-cell">二</th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :isShowWeekendDefault 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="2010 年" class="t-select-option t-size-m"><span>
            2010 年
          </span></li>
                    <li title="2011 年" class="t-select-option t-size-m"><span>
            2011 年
          </span></li>
                    <li title="2012 年" class="t-select-option t-size-m"><span>
            2012 年
          </span></li>
                    <li title="2013 年" class="t-select-option t-size-m"><span>
            2013 年
          </span></li>
                    <li title="2014 年" class="t-select-option t-size-m"><span>
            2014 年
          </span></li>
                    <li title="2015 年" class="t-select-option t-size-m"><span>
            2015 年
          </span></li>
                    <li title="2016 年" class="t-select-option t-size-m"><span>
            2016 年
          </span></li>
                    <li title="2017 年" class="t-select-option t-size-m"><span>
            2017 年
          </span></li>
                    <li title="2018 年" class="t-select-option t-size-m"><span>
            2018 年
          </span></li>
                    <li title="2019 年" class="t-select-option t-size-m"><span>
            2019 年
          </span></li>
                    <li title="2020 年" class="t-select-option t-is-selected t-size-m"><span>
            2020 年
          </span></li>
                    <li title="2021 年" class="t-select-option t-size-m"><span>
            2021 年
          </span></li>
                    <li title="2022 年" class="t-select-option t-size-m"><span>
            2022 年
          </span></li>
                    <li title="2023 年" class="t-select-option t-size-m"><span>
            2023 年
          </span></li>
                    <li title="2024 年" class="t-select-option t-size-m"><span>
            2024 年
          </span></li>
                    <li title="2025 年" class="t-select-option t-size-m"><span>
            2025 年
          </span></li>
                    <li title="2026 年" class="t-select-option t-size-m"><span>
            2026 年
          </span></li>
                    <li title="2027 年" class="t-select-option t-size-m"><span>
            2027 年
          </span></li>
                    <li title="2028 年" class="t-select-option t-size-m"><span>
            2028 年
          </span></li>
                    <li title="2029 年" class="t-select-option t-size-m"><span>
            2029 年
          </span></li>
                    <li title="2030 年" class="t-select-option t-size-m"><span>
            2030 年
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="1 月" class="t-select-option t-size-m"><span>
            1 月
          </span></li>
                    <li title="2 月" class="t-select-option t-size-m"><span>
            2 月
          </span></li>
                    <li title="3 月" class="t-select-option t-size-m"><span>
            3 月
          </span></li>
                    <li title="4 月" class="t-select-option t-size-m"><span>
            4 月
          </span></li>
                    <li title="5 月" class="t-select-option t-size-m"><span>
            5 月
          </span></li>
                    <li title="6 月" class="t-select-option t-size-m"><span>
            6 月
          </span></li>
                    <li title="7 月" class="t-select-option t-size-m"><span>
            7 月
          </span></li>
                    <li title="8 月" class="t-select-option t-size-m"><span>
            8 月
          </span></li>
                    <li title="9 月" class="t-select-option t-size-m"><span>
            9 月
          </span></li>
                    <li title="10 月" class="t-select-option t-size-m"><span>
            10 月
          </span></li>
                    <li title="11 月" class="t-select-option t-size-m"><span>
            11 月
          </span></li>
                    <li title="12 月" class="t-select-option t-is-selected t-size-m"><span>
            12 月
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section" style="height: auto;">
      <div class="t-radio-group t-radio-group-outline t-radio-group-medium"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
    </div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-primary"><span class="t-button__text">
        显示周末</span></button></div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        今天
      </span></button></div>
  </div>
  <div class="t-calendar__panel t-calendar__panel--month">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">一</th>
          <th class="t-calendar__table-head-cell">二</th>
          <th class="t-calendar__table-head-cell">三</th>
          <th class="t-calendar__table-head-cell">四</th>
          <th class="t-calendar__table-head-cell">五</th>
          <!---->
          <!---->
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :mode 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="2010 年" class="t-select-option t-size-m"><span>
            2010 年
          </span></li>
                    <li title="2011 年" class="t-select-option t-size-m"><span>
            2011 年
          </span></li>
                    <li title="2012 年" class="t-select-option t-size-m"><span>
            2012 年
          </span></li>
                    <li title="2013 年" class="t-select-option t-size-m"><span>
            2013 年
          </span></li>
                    <li title="2014 年" class="t-select-option t-size-m"><span>
            2014 年
          </span></li>
                    <li title="2015 年" class="t-select-option t-size-m"><span>
            2015 年
          </span></li>
                    <li title="2016 年" class="t-select-option t-size-m"><span>
            2016 年
          </span></li>
                    <li title="2017 年" class="t-select-option t-size-m"><span>
            2017 年
          </span></li>
                    <li title="2018 年" class="t-select-option t-size-m"><span>
            2018 年
          </span></li>
                    <li title="2019 年" class="t-select-option t-size-m"><span>
            2019 年
          </span></li>
                    <li title="2020 年" class="t-select-option t-is-selected t-size-m"><span>
            2020 年
          </span></li>
                    <li title="2021 年" class="t-select-option t-size-m"><span>
            2021 年
          </span></li>
                    <li title="2022 年" class="t-select-option t-size-m"><span>
            2022 年
          </span></li>
                    <li title="2023 年" class="t-select-option t-size-m"><span>
            2023 年
          </span></li>
                    <li title="2024 年" class="t-select-option t-size-m"><span>
            2024 年
          </span></li>
                    <li title="2025 年" class="t-select-option t-size-m"><span>
            2025 年
          </span></li>
                    <li title="2026 年" class="t-select-option t-size-m"><span>
            2026 年
          </span></li>
                    <li title="2027 年" class="t-select-option t-size-m"><span>
            2027 年
          </span></li>
                    <li title="2028 年" class="t-select-option t-size-m"><span>
            2028 年
          </span></li>
                    <li title="2029 年" class="t-select-option t-size-m"><span>
            2029 年
          </span></li>
                    <li title="2030 年" class="t-select-option t-size-m"><span>
            2030 年
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
      <!---->
    </div>
    <div class="t-calendar__control-section" style="height: auto;">
      <div class="t-radio-group t-radio-group-outline t-radio-group-medium"><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="month" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="year" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
    </div>
    <div class="t-calendar__control-section">
      <!---->
    </div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        本月
      </span></button></div>
  </div>
  <div class="t-calendar__panel t-calendar__panel--year">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">一月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">二月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">三月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">四月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">五月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">六月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">七月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">八月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">九月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">十月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">十一月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">十二月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :range 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="2018 年" class="t-select-option t-size-m"><span>
            2018 年
          </span></li>
                    <li title="2019 年" class="t-select-option t-size-m"><span>
            2019 年
          </span></li>
                    <li title="2020 年" class="t-select-option t-is-selected t-size-m"><span>
            2020 年
          </span></li>
                    <li title="2021 年" class="t-select-option t-size-m"><span>
            2021 年
          </span></li>
                    <li title="2022 年" class="t-select-option t-size-m"><span>
            2022 年
          </span></li>
                    <li title="2023 年" class="t-select-option t-size-m"><span>
            2023 年
          </span></li>
                    <li title="2024 年" class="t-select-option t-size-m"><span>
            2024 年
          </span></li>
                    <li title="2025 年" class="t-select-option t-size-m"><span>
            2025 年
          </span></li>
                    <li title="2026 年" class="t-select-option t-size-m"><span>
            2026 年
          </span></li>
                    <li title="2027 年" class="t-select-option t-size-m"><span>
            2027 年
          </span></li>
                    <li title="2028 年" class="t-select-option t-is-disabled t-size-m"><span>
            2028 年
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="1 月" class="t-select-option t-size-m"><span>
            1 月
          </span></li>
                    <li title="2 月" class="t-select-option t-size-m"><span>
            2 月
          </span></li>
                    <li title="3 月" class="t-select-option t-size-m"><span>
            3 月
          </span></li>
                    <li title="4 月" class="t-select-option t-size-m"><span>
            4 月
          </span></li>
                    <li title="5 月" class="t-select-option t-size-m"><span>
            5 月
          </span></li>
                    <li title="6 月" class="t-select-option t-size-m"><span>
            6 月
          </span></li>
                    <li title="7 月" class="t-select-option t-size-m"><span>
            7 月
          </span></li>
                    <li title="8 月" class="t-select-option t-size-m"><span>
            8 月
          </span></li>
                    <li title="9 月" class="t-select-option t-size-m"><span>
            9 月
          </span></li>
                    <li title="10 月" class="t-select-option t-size-m"><span>
            10 月
          </span></li>
                    <li title="11 月" class="t-select-option t-size-m"><span>
            11 月
          </span></li>
                    <li title="12 月" class="t-select-option t-is-selected t-size-m"><span>
            12 月
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section" style="height: auto;">
      <div class="t-radio-group t-radio-group-outline t-radio-group-medium"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
    </div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        隐藏周末</span></button></div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        今天
      </span></button></div>
  </div>
  <div class="t-calendar__panel t-calendar__panel--month">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">一</th>
          <th class="t-calendar__table-head-cell">二</th>
          <th class="t-calendar__table-head-cell">三</th>
          <th class="t-calendar__table-head-cell">四</th>
          <th class="t-calendar__table-head-cell">五</th>
          <th class="t-calendar__table-head-cell">六</th>
          <th class="t-calendar__table-head-cell">日</th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :theme 1`] = `
<div class="t-calendar t-calendar--card">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="2010 年" class="t-select-option t-size-m"><span>
            2010 年
          </span></li>
                    <li title="2011 年" class="t-select-option t-size-m"><span>
            2011 年
          </span></li>
                    <li title="2012 年" class="t-select-option t-size-m"><span>
            2012 年
          </span></li>
                    <li title="2013 年" class="t-select-option t-size-m"><span>
            2013 年
          </span></li>
                    <li title="2014 年" class="t-select-option t-size-m"><span>
            2014 年
          </span></li>
                    <li title="2015 年" class="t-select-option t-size-m"><span>
            2015 年
          </span></li>
                    <li title="2016 年" class="t-select-option t-size-m"><span>
            2016 年
          </span></li>
                    <li title="2017 年" class="t-select-option t-size-m"><span>
            2017 年
          </span></li>
                    <li title="2018 年" class="t-select-option t-size-m"><span>
            2018 年
          </span></li>
                    <li title="2019 年" class="t-select-option t-size-m"><span>
            2019 年
          </span></li>
                    <li title="2020 年" class="t-select-option t-is-selected t-size-m"><span>
            2020 年
          </span></li>
                    <li title="2021 年" class="t-select-option t-size-m"><span>
            2021 年
          </span></li>
                    <li title="2022 年" class="t-select-option t-size-m"><span>
            2022 年
          </span></li>
                    <li title="2023 年" class="t-select-option t-size-m"><span>
            2023 年
          </span></li>
                    <li title="2024 年" class="t-select-option t-size-m"><span>
            2024 年
          </span></li>
                    <li title="2025 年" class="t-select-option t-size-m"><span>
            2025 年
          </span></li>
                    <li title="2026 年" class="t-select-option t-size-m"><span>
            2026 年
          </span></li>
                    <li title="2027 年" class="t-select-option t-size-m"><span>
            2027 年
          </span></li>
                    <li title="2028 年" class="t-select-option t-size-m"><span>
            2028 年
          </span></li>
                    <li title="2029 年" class="t-select-option t-size-m"><span>
            2029 年
          </span></li>
                    <li title="2030 年" class="t-select-option t-size-m"><span>
            2030 年
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="1 月" class="t-select-option t-size-m"><span>
            1 月
          </span></li>
                    <li title="2 月" class="t-select-option t-size-m"><span>
            2 月
          </span></li>
                    <li title="3 月" class="t-select-option t-size-m"><span>
            3 月
          </span></li>
                    <li title="4 月" class="t-select-option t-size-m"><span>
            4 月
          </span></li>
                    <li title="5 月" class="t-select-option t-size-m"><span>
            5 月
          </span></li>
                    <li title="6 月" class="t-select-option t-size-m"><span>
            6 月
          </span></li>
                    <li title="7 月" class="t-select-option t-size-m"><span>
            7 月
          </span></li>
                    <li title="8 月" class="t-select-option t-size-m"><span>
            8 月
          </span></li>
                    <li title="9 月" class="t-select-option t-size-m"><span>
            9 月
          </span></li>
                    <li title="10 月" class="t-select-option t-size-m"><span>
            10 月
          </span></li>
                    <li title="11 月" class="t-select-option t-size-m"><span>
            11 月
          </span></li>
                    <li title="12 月" class="t-select-option t-is-selected t-size-m"><span>
            12 月
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section" style="height: auto;">
      <div class="t-radio-group t-radio-group-outline t-radio-group-medium"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
    </div>
    <!---->
    <!---->
  </div>
  <div class="t-calendar__panel t-calendar__panel--month">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">一</th>
          <th class="t-calendar__table-head-cell">二</th>
          <th class="t-calendar__table-head-cell">三</th>
          <th class="t-calendar__table-head-cell">四</th>
          <th class="t-calendar__table-head-cell">五</th>
          <th class="t-calendar__table-head-cell">六</th>
          <th class="t-calendar__table-head-cell">日</th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :value 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="1988 年" class="t-select-option t-size-m"><span>
            1988 年
          </span></li>
                    <li title="1989 年" class="t-select-option t-size-m"><span>
            1989 年
          </span></li>
                    <li title="1990 年" class="t-select-option t-size-m"><span>
            1990 年
          </span></li>
                    <li title="1991 年" class="t-select-option t-size-m"><span>
            1991 年
          </span></li>
                    <li title="1992 年" class="t-select-option t-size-m"><span>
            1992 年
          </span></li>
                    <li title="1993 年" class="t-select-option t-size-m"><span>
            1993 年
          </span></li>
                    <li title="1994 年" class="t-select-option t-size-m"><span>
            1994 年
          </span></li>
                    <li title="1995 年" class="t-select-option t-size-m"><span>
            1995 年
          </span></li>
                    <li title="1996 年" class="t-select-option t-size-m"><span>
            1996 年
          </span></li>
                    <li title="1997 年" class="t-select-option t-size-m"><span>
            1997 年
          </span></li>
                    <li title="1998 年" class="t-select-option t-is-selected t-size-m"><span>
            1998 年
          </span></li>
                    <li title="1999 年" class="t-select-option t-size-m"><span>
            1999 年
          </span></li>
                    <li title="2000 年" class="t-select-option t-size-m"><span>
            2000 年
          </span></li>
                    <li title="2001 年" class="t-select-option t-size-m"><span>
            2001 年
          </span></li>
                    <li title="2002 年" class="t-select-option t-size-m"><span>
            2002 年
          </span></li>
                    <li title="2003 年" class="t-select-option t-size-m"><span>
            2003 年
          </span></li>
                    <li title="2004 年" class="t-select-option t-size-m"><span>
            2004 年
          </span></li>
                    <li title="2005 年" class="t-select-option t-size-m"><span>
            2005 年
          </span></li>
                    <li title="2006 年" class="t-select-option t-size-m"><span>
            2006 年
          </span></li>
                    <li title="2007 年" class="t-select-option t-size-m"><span>
            2007 年
          </span></li>
                    <li title="2008 年" class="t-select-option t-size-m"><span>
            2008 年
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div class="t-select-wrap">
          <div class="t-popup-reference t-select-popup-reference">
            <transition-stub name="t-popup_animation" appear="true">
              <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
                <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
                  <div>
                    <ul class="t-select-create-option" style="display: none;">
                      <li title="" class="t-select-option t-size-m t-select-create-option-special"><span></span></li>
                    </ul>
                    <li class="t-select-empty t-size-m">暂无数据</li><span style="display: none;"><li title="1 月" class="t-select-option t-size-m"><span>
            1 月
          </span></li>
                    <li title="2 月" class="t-select-option t-size-m"><span>
            2 月
          </span></li>
                    <li title="3 月" class="t-select-option t-size-m"><span>
            3 月
          </span></li>
                    <li title="4 月" class="t-select-option t-size-m"><span>
            4 月
          </span></li>
                    <li title="5 月" class="t-select-option t-size-m"><span>
            5 月
          </span></li>
                    <li title="6 月" class="t-select-option t-size-m"><span>
            6 月
          </span></li>
                    <li title="7 月" class="t-select-option t-size-m"><span>
            7 月
          </span></li>
                    <li title="8 月" class="t-select-option t-size-m"><span>
            8 月
          </span></li>
                    <li title="9 月" class="t-select-option t-size-m"><span>
            9 月
          </span></li>
                    <li title="10 月" class="t-select-option t-size-m"><span>
            10 月
          </span></li>
                    <li title="11 月" class="t-select-option t-is-selected t-size-m"><span>
            11 月
          </span></li>
                    <li title="12 月" class="t-select-option t-size-m"><span>
            12 月
          </span></li>
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
            <div class="t-select t-size-m"><span class="t-select-placeholder"> </span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-select-right-icon t-fake-arrow">
                <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
              </svg></div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section" style="height: auto;">
      <div class="t-radio-group t-radio-group-outline t-radio-group-medium"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year" name=""><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
    </div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        隐藏周末</span></button></div>
    <div class="t-calendar__control-section"><button type="button" class="t-button t-size-m t-button--variant-base t-button--theme-default"><span class="t-button__text">
        今天
      </span></button></div>
  </div>
  <div class="t-calendar__panel t-calendar__panel--month">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">一</th>
          <th class="t-calendar__table-head-cell">二</th>
          <th class="t-calendar__table-head-cell">三</th>
          <th class="t-calendar__table-head-cell">四</th>
          <th class="t-calendar__table-head-cell">五</th>
          <th class="t-calendar__table-head-cell">六</th>
          <th class="t-calendar__table-head-cell">日</th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
